# StreamWeaver

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup_dev.py
.github/workflows/: ci.yml
examples/advanced/: multi_step_workflow.py
examples/basic/: simple_agent.py
examples/client/: react_consumer.tsx
streamweaver/: __init__.py
streamweaver/core/: __init__.py  backpressure.py  batching.py  events.py  filters.py  generator.py  metrics.py  replay.py  schemas.py  service.py  session.py
streamweaver/integrations/: __init__.py  fastapi.py  websocket.py
streamweaver/storage/: __init__.py  redis.py
streamweaver/utils/: serialization.py
tests/: test_backpressure.py  test_batching.py  test_events.py  test_filters.py  test_metrics.py  test_redis.py  test_replay.py  test_service.py  test_session.py  test_websocket.py
