[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "streamweaver"
version = "0.2.0"
description = "Enterprise-grade Server-Sent Events for agentic workflows"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Okiynai Team", email = "info@okiynai.com"},
]
keywords = [
    "sse",
    "server-sent-events",
    "streaming",
    "ai",
    "agents",
    "async",
    "fastapi",
    "websocket",
    "llm",
    "workflows",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: AsyncIO",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
fastapi = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
]
redis = [
    "redis>=5.0.0",
]
metrics = [
    "prometheus-client>=0.17.0",
]
all = [
    "streamweaver[fastapi,redis,metrics]",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
    "streamweaver[all]",
]

[project.urls]
Homepage = "https://github.com/okiynai/streamweaver"
Documentation = "https://github.com/okiynai/streamweaver#readme"
Repository = "https://github.com/okiynai/streamweaver.git"
Issues = "https://github.com/okiynai/streamweaver/issues"
Changelog = "https://github.com/okiynai/streamweaver/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["streamweaver"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]  # Line length handled by black

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["streamweaver"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
